# SPAM

./: .gitignore  Hackapizza_instructions.md  README.md  api_reference.md  commands.txt  game_data_reference.md  game_events.jsonl  longs.txt  requirements.txt  vectorspace_data.json
Datapizza_docs/: GitHub_README.md  home.txt
_docs/: Hackapizza_instructions.md  api_reference.md  datapizza_framework_fields_reference.md  decision_logic.md  game_data_reference.md  implementation_strategy.md  server_intelligence_report.md  vectorization_strategy.md
_server_changes/: tracker.py
dashboard/: __init__.py  analytics.py  app.py
datapizza_observability/: README.md  pyproject.toml
datapizza_observability/datapizza/modules/observability/: __init__.py  snapshot_store.py  trajectory_tracker.py  vector_space.py
datapizza_observability/datapizza/tools/: __init__.py
datapizza_observability/datapizza/tools/vectorspace/: __init__.py  dashboard.py  viewer.py
datapizza_observability/examples/: agent_introspection.py  basic_pipeline.py  multi_agent_observation.py
datapizza_observability/tests/: test_observability.py  test_viewer.py
src/: __init__.py  config.py  event_bus.py  http_retry.py  main.py  models.py  phase_router.py  recipe_loader.py  skills.py
statistics/: analysis_report.md  business_trajectory.md  diagram_interpretations.md  extract_graph_data.py  graph_data.md  run_analysis.py
templates/: client_template.py
tests/: test_agent_integration.py  test_bid_connection.py  test_classifier_quick.py  test_diplomacy_flow.py  test_fixes.py  test_mcp_diag.py  test_new_features.py  test_order_intolerance.py  test_pricing_quick.py  test_serving_pipeline.py  test_xray.py  (+3 more)
(+79 files in other folders)
